--- a/jfkreatifemobile-view-all-ud-cetak.html
+++ b/jfkreatifemobile-view-all-ud-cetak.html
@@ -32,8 +32,8 @@
         <a href="#" class="button_close_jv showAndClose_button2">Tutup</a>
         <div class="inner_menu_pop_up">
             <ul>
-                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Kontak WA 1</a></li>
-                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Kontak WA 2</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Chat WA 1</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Chat WA 2</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up2 -->
@@ -43,7 +43,7 @@
 	<div class="jfkreatifmenu clearfix">
 		<div class="jfmenu jfkreatif-logo" style="cursor:pointer" onclick="linkhome()" ><img src="img/jfkreatif/jfkreatiflogo.png" width="76px" height="19px" /></div>
 		<div class="jfmenu jfkreatif-tombol"><a href="#" class="showAndClose_button"><img src="img/jfkreatif/tombol-titik-tilu.png" width="3px" height="16px"/></a></div>
-		<div class="jfmenu jfkreatif-tombol-Wa"><button class="shiny-blue showAndClose_button2"><i class="fa fa-whatsapp"></i>Hubungi</button></div>
+		<div class="jfmenu jfkreatif-tombol-Wa"><button class="shiny-blue showAndClose_button2"><i class="fa fa-whatsapp"></i> Chat Kami</button></div>
 	</div><!-- jfkreatifmenu -->
 	
 	
@@ -52,9 +52,9 @@
 	<div class="row-jfkreatif">
 		<div class="jf-kolum-view-detail-2">
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-ud-cetak-more-001.html'">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-001.html">
+							<a>
 								<img src="img/ud-ft-001.png" />
 							</a>
 						</div>
@@ -64,9 +64,9 @@
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-ud-cetak-more-002.html'">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-002.html">
+							<a>
 								<img src="img/ud-ft-002.png" />
 							</a>
 						</div>
@@ -76,9 +76,9 @@
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-ud-cetak-more-003.html'">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-003.html">
+							<a>
 								<img src="img/ud-ft-003.png" />
 							</a>
 						</div>
@@ -88,9 +88,9 @@
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-ud-cetak-more-004.html'">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-004.html">
+							<a>
 								<img src="img/ud-ft-004.png" />
 							</a>
 						</div>
@@ -101,9 +101,9 @@
 			</div>
 			
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-ud-cetak-more-005.html'">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-005.html">
+							<a>
 								<img src="img/ud-ft-005.png" />
 							</a>
 						</div>
@@ -114,9 +114,9 @@
 			</div>
 			
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-ud-cetak-more-006.html'">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-006.html">
+							<a>
 								<img src="img/ud-ft-006.png" />
 							</a>
 						</div>
@@ -127,9 +127,9 @@
 			</div>
 			
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-ud-cetak-more-007.html'">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-007.html">
+							<a>
 								<img src="img/ud-ft-007.png" />
 							</a>
 						</div>
@@ -140,9 +140,9 @@
 			</div>
 			
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-ud-cetak-more-008.html'">
 						<div class="jfthumbnail">
-							<a href="jfkreatifemobile-ud-cetak-more-008.html">
+							<a>
 								<img src="img/ud-ft-008.png" />
 							</a>
 						</div>
