--- a/more-save-the-date-001.html
+++ b/more-save-the-date-001.html
@@ -29,8 +29,8 @@
         <a href="#" class="button_close_jv showAndClose_button2">Tutup</a>
         <div class="inner_menu_pop_up">
             <ul>
-                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Kontak WA 1</a></li>
-                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Kontak WA 2</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Chat WA 1</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Chat WA 2</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up2 -->
@@ -41,7 +41,7 @@
 	<div class="jfkreatifmenu clearfix">
 		<div class="jfmenu jfkreatif-logo" style="cursor:pointer" onclick="linkhome()"><img src="img/jfkreatif/jfkreatiflogo.png" width="76px" height="19px" /></div>
 		<div class="jfmenu jfkreatif-tombol"><a href="#" class="showAndClose_button"><img src="img/jfkreatif/tombol-titik-tilu.png" width="3px" height="16px"/></a></div>
-		<div class="jfmenu jfkreatif-tombol-Wa"><button class="shiny-blue showAndClose_button2"><i class="fa fa-whatsapp"></i>Hubungi</button></div>
+		<div class="jfmenu jfkreatif-tombol-Wa"><button class="shiny-blue showAndClose_button2"><i class="fa fa-whatsapp"></i> Chat Kami</button></div>
 	</div><!-- jfkreatifmenu -->
 	
 	
@@ -60,15 +60,10 @@
 				 </div>
 				 <div class="text-read-more-">
 					<button class="shiny-blue waorder" onclick="waorderStd('STD 001')"><i class="fa fa-whatsapp"></i> Order Undangan / Tanya dulu</button>
-					
-				 <p><b>Detail Undangan Digital STD 001</b><br/><br/>
-
-Terima kasih Kamu Sudah memilih 
-Undangan Digital Gambar STD 001 dan Dibawah 
-Ini Detail Undangan Beserta pitur-pitur 
-di dalamnya,Baca secara Seksama 
-Agar kamu Lebih jelas,sebelum order bisa Tanya-Tanya Dulu dengan Cara  
-Mengklik Tombol Order dan tanyakan seputar undangan ini</p></br>
+					<p><b>Detail Undangan Digital Gambar</b><br/><br/>
+Terima kasih telah Berkunjung <br>
+Di bawah ini detail Undangan Digital Gambar <br> jika ada yang mau ditanyakan jangan sungkan-sungkan chat kami<br><br>
+Klik tombol [ Order Undangan / Tanya dulu ] Untuk menanyakan seputar undangan ini dan jika kamu cocok bisa langsung order<br><br>Terima kasih <br></p><br>
 <div class="tabel">
 	<table>
 		<tr>
