--- a/ud-save-the-date.html
+++ b/ud-save-the-date.html
@@ -32,8 +32,8 @@
         <a href="#" class="button_close_jv showAndClose_button2">Tutup</a>
         <div class="inner_menu_pop_up">
             <ul>
-                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Kontak WA 1</a></li>
-                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Kontak WA 2</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Chat WA 1</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Chat WA 2</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up2 -->
@@ -43,7 +43,7 @@
 	<div class="jfkreatifmenu clearfix">
 		<div class="jfmenu jfkreatif-logo" style="cursor:pointer" onclick="linkhome()" ><img src="img/jfkreatif/jfkreatiflogo.png" width="76px" height="19px" /></div>
 		<div class="jfmenu jfkreatif-tombol"><a href="#" class="showAndClose_button"><img src="img/jfkreatif/tombol-titik-tilu.png" width="3px" height="16px"/></a></div>
-		<div class="jfmenu jfkreatif-tombol-Wa"><button class="shiny-blue showAndClose_button2"><i class="fa fa-whatsapp"></i>Hubungi</button></div>
+		<div class="jfmenu jfkreatif-tombol-Wa"><button class="shiny-blue showAndClose_button2"><i class="fa fa-whatsapp"></i>Chat Kami</button></div>
 	</div><!-- jfkreatifmenu -->
 	
 	
@@ -53,9 +53,9 @@
 	    <br />
 		<div class="jf-kolum-view-detail-2">
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='more-save-the-date-001.html'">
 						<div class="jfthumbnail">
-							<a href="more-save-the-date-001.html">
+							<a>
 								<img src="img/save-the-date-001.png" />
 							</a>
 						</div>
@@ -66,9 +66,9 @@
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='more-save-the-date-002.html'">
 						<div class="jfthumbnail">
-							<a href="more-save-the-date-002.html">
+							<a>
 								<img src="img/save-the-date-002.png" />
 							</a>
 						</div>
@@ -79,9 +79,9 @@
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='more-save-the-date-003.html'">
 						<div class="jfthumbnail">
-							<a href="more-save-the-date-003.html">
+							<a>
 								<img src="img/save-the-date-003.png" />
 							</a>
 						</div>
@@ -93,9 +93,9 @@
 			</div>
 			
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb-2">
+				<div class="jf-thumb-2" style="cursor:pointer" onclick="window.location.href='more-save-the-date-004.html'">
 						<div class="jfthumbnail">
-							<a href="more-save-the-date-004.html">
+							<a>
 								<img src="img/save-the-date-004.png" />
 							</a>
 						</div>
@@ -107,9 +107,10 @@
 			</div>
 		</div><!-- jf-kolum-view-detail -->
 	</div>
-</div><!-- jfkreatif-content -->
 	
+</div><!-- jfkreatif-content -->
 <div class="jfpitur" style="display:none">
+
 	<div class="row-jfpitur">
 		<div class="kolom-jfpitur" style="display:none">
 			<div class="in-jfpitur bgblue">
