--- a/jfkreatifemobile-more-004.html
+++ b/jfkreatifemobile-more-004.html
@@ -30,8 +30,8 @@
         <a href="#" class="button_close_jv showAndClose_button2">Tutup</a>
         <div class="inner_menu_pop_up">
             <ul>
-                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Kontak WA 1</a></li>
-                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Kontak WA 2</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Chat WA 1</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Chat WA 2</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up2 -->
@@ -42,7 +42,7 @@
 	<div class="jfkreatifmenu clearfix">
 		<div class="jfmenu jfkreatif-logo" style="cursor:pointer" onclick="linkhome()"><img src="img/jfkreatif/jfkreatiflogo.png" width="76px" height="19px" /></div>
 		<div class="jfmenu jfkreatif-tombol"><a href="#" class="showAndClose_button"><img src="img/jfkreatif/tombol-titik-tilu.png" width="3px" height="16px"/></a></div>
-		<div class="jfmenu jfkreatif-tombol-Wa"><button class="shiny-blue showAndClose_button2"><i class="fa fa-whatsapp"></i>Hubungi</button></div>
+		<div class="jfmenu jfkreatif-tombol-Wa"><button class="shiny-blue showAndClose_button2"><i class="fa fa-whatsapp"></i> Chat Kami</button></div>
 	</div><!-- jfkreatifmenu -->
 	
 	
@@ -59,16 +59,14 @@
 					<img src="img/ud-jf-004.png" width="100%" />
 				 </div>
 				 <div class="text-read-more">
-					<button class="shiny-blue waorder" onclick="waorderUdwebsite('JF 004')"><i class="fa fa-whatsapp"></i> Order Undangan</button>
-					<button class="shiny-blue2"  onclick="window.open('undangan-jf-004.html')"><i class="fa fa-eye"></i> View Demo</button>
+					<button class="shiny-blue waorder" onclick="waorderUdwebsite('JF 004')"><i class="fa fa-whatsapp"></i> Order / Tanya Dulu</button>
+					<button class="shiny-blue2"  onclick="window.open('undangan-jf-004.html')"><i class="fa fa-eye"></i> Demo</button>
 				 <p><b>Detail Undangan Website Tipe JF</b><br/><br/>
 
-Terima kasih Kamu Sudah memilih 
-Undangan website tipe JF dan Dibawah 
-Ini Detail Undangan Beserta pitur-pitur 
-di dalamnya,Baca secara Seksama 
-Agar kamu Lebih jelas sebelum 
-Mengklik Tombol Order</p></br>
+Terima kasih telah Berkunjung <br>
+Di bawah ini detail undangan digital website
+Beserta fitur-fitur nya <br><br> jika ada yang mau ditanyakan jangan sungkan-sungkan chat kami<br><br>
+Klik tombol [ Order / Tanya dulu ] Untuk menanyakan seputar undangan ini dan jika kamu cocok bisa langsung order<br><br>Terima kasih <br><br></p><br>
 
 				 </div>
 			</div><!-- jfkonten-jual -->
