--- a/jfkreatifemobile-view-all-ud-online.html
+++ b/jfkreatifemobile-view-all-ud-online.html
@@ -32,8 +32,8 @@
         <a href="#" class="button_close_jv showAndClose_button2">Tutup</a>
         <div class="inner_menu_pop_up">
             <ul>
-                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Kontak WA 1</a></li>
-                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Kontak WA 2</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6289605563525">Chat WA 1</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=6281285869732">Chat WA 2</a></li>
             </ul>
         </div>
 </div><!-- menu_pop_up2 -->
@@ -43,7 +43,7 @@
 	<div class="jfkreatifmenu clearfix">
 		<div class="jfmenu jfkreatif-logo" style="cursor:pointer" onclick="linkhome()" ><img src="img/jfkreatif/jfkreatiflogo.png" width="76px" height="19px" /></div>
 		<div class="jfmenu jfkreatif-tombol"><a href="#" class="showAndClose_button"><img src="img/jfkreatif/tombol-titik-tilu.png" width="3px" height="16px"/></a></div>
-		<div class="jfmenu jfkreatif-tombol-Wa"><button class="shiny-blue showAndClose_button2"><i class="fa fa-whatsapp"></i>Hubungi</button></div>
+		<div class="jfmenu jfkreatif-tombol-Wa"><button class="shiny-blue showAndClose_button2"><i class="fa fa-whatsapp"></i> Chat Kami</button></div>
 	</div><!-- jfkreatifmenu -->
 	
 	
@@ -52,8 +52,8 @@
 	<div class="row-jfkreatif">
 		<div class="jf-kolum-view-detail clearfix">
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb">
-						<div class="jfthumbnail">
+				<div class="jf-thumb" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-more-001.html'">
+						<div class="jfthumbnail" >
 							<a href="jfkreatifemobile-more-001.html"">
 								<img src="img/ud-jf-001.png" />
 							</a>
@@ -66,7 +66,7 @@
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb">
+				<div class="jf-thumb" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-more-002.html'">
 						<div class="jfthumbnail">
 							<a href="jfkreatifemobile-more-002.html">
 								<img src="img/ud-jf-002.png" />
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb">
+				<div class="jf-thumb" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-more-003.html'">
 						<div class="jfthumbnail">
 							<a href="jfkreatifemobile-more-003.html">
 								<img src="img/ud-jf-003.png" />
@@ -94,7 +94,7 @@
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb">
+				<div class="jf-thumb" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-more-004.html'">
 						<div class="jfthumbnail">
 							<a href="jfkreatifemobile-more-004.html">
 								<img src="img/ud-jf-004.png" />
@@ -108,7 +108,7 @@
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb">
+				<div class="jf-thumb" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-more-006.html'">
 						<div class="jfthumbnail">
 							<a href="jfkreatifemobile-more-006.html">
 								<img src="img/ud-jf-006.png" />
@@ -122,7 +122,7 @@
 				</div>
 			</div>
 			<div class="jf-kolom-thumb-detail">
-				<div class="jf-thumb">
+				<div class="jf-thumb" style="cursor:pointer" onclick="window.location.href='jfkreatifemobile-more-007.html'">
 						<div class="jfthumbnail">
 							<a href="jfkreatifemobile-more-007.html">
 								<img src="img/ud-jf-007.png" />
